Added .env file variable validation in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,19 @@ services:
     environment:
       - NODE_ENV=development
       - HOST=0.0.0.0
-      - DATABASE_URL=${DATABASE_URL}
-      - PGHOST=${PGHOST}
-      - PGPORT=${PGPORT}
-      - PGUSER=${PGUSER}
-      - PGPASSWORD=${PGPASSWORD}
-      - PGDATABASE=${PGDATABASE}
-      - SESSION_SECRET=${SESSION_SECRET}
-      - DEFAULT_ADMIN_USERNAME=${DEFAULT_ADMIN_USERNAME}
-      - DEFAULT_ADMIN_PASSWORD=${DEFAULT_ADMIN_PASSWORD}
-      - DEFAULT_ADMIN_EMAIL=${DEFAULT_ADMIN_EMAIL}
-      - DEFAULT_VIEWER_USERNAME=${DEFAULT_VIEWER_USERNAME}
-      - DEFAULT_VIEWER_PASSWORD=${DEFAULT_VIEWER_PASSWORD}
-      - DEFAULT_VIEWER_EMAIL=${DEFAULT_VIEWER_EMAIL}
+      - DATABASE_URL=${DATABASE_URL:?DATABASE_URL is required}
+      - PGHOST=${PGHOST:?PGHOST is required}
+      - PGPORT=${PGPORT:?PGPORT is required}
+      - PGUSER=${PGUSER:?PGUSER is required}
+      - PGPASSWORD=${PGPASSWORD:?PGPASSWORD is required}
+      - PGDATABASE=${PGDATABASE:?PGDATABASE is required}
+      - SESSION_SECRET=${SESSION_SECRET:?SESSION_SECRET is required}
+      - DEFAULT_ADMIN_USERNAME=${DEFAULT_ADMIN_USERNAME:?DEFAULT_ADMIN_USERNAME is required}
+      - DEFAULT_ADMIN_PASSWORD=${DEFAULT_ADMIN_PASSWORD:?DEFAULT_ADMIN_PASSWORD is required}
+      - DEFAULT_ADMIN_EMAIL=${DEFAULT_ADMIN_EMAIL:?DEFAULT_ADMIN_EMAIL is required}
+      - DEFAULT_VIEWER_USERNAME=${DEFAULT_VIEWER_USERNAME:?DEFAULT_VIEWER_USERNAME is required}
+      - DEFAULT_VIEWER_PASSWORD=${DEFAULT_VIEWER_PASSWORD:?DEFAULT_VIEWER_PASSWORD is required}
+      - DEFAULT_VIEWER_EMAIL=${DEFAULT_VIEWER_EMAIL:?DEFAULT_VIEWER_EMAIL is required}
     depends_on:
       db:
         condition: service_healthy
@@ -32,9 +32,9 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      - POSTGRES_DB=${PGDATABASE}
-      - POSTGRES_USER=${PGUSER}
-      - POSTGRES_PASSWORD=${PGPASSWORD}
+      - POSTGRES_DB=${PGDATABASE:?PGDATABASE is required}
+      - POSTGRES_USER=${PGUSER:?PGUSER is required}
+      - POSTGRES_PASSWORD=${PGPASSWORD:?PGPASSWORD is required}
     ports:
       - "5432:5432"
     volumes:
